--- a/binance_ws/Cargo.toml
+++ b/binance_ws/Cargo.toml
@@ -13,3 +13,7 @@ serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0"
 futures = "0.3.28"
 serde_derive = "1.0"
+reqwest = { version = "0.11.22", features = ["json", "blocking"] }
+hmac = "0.11.0"
+sha2 = "0.9"
+hex = "0.4"
